--- a/resume/about.html
+++ b/resume/about.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -59,7 +57,7 @@
             <div class="row">
                 <div class="col-lg-9">
                     <section id="about">
-                        <h1 class="display-5">About Me</h1>
+                        <h1>About Me</h1>
                         <p>
                             Hi there! My name is Kimberly Vallido. I am a first generation Filipino American software
                             development student who loves music, video games and hanging out with my cat. A few years of working with code has shown me just how much I enjoy learning new ways to
@@ -116,7 +114,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 
