--- a/resume/portfolio.html
+++ b/resume/portfolio.html
@@ -61,6 +61,11 @@
                     <div class="col-md-3">
                     </div>
                     <div class="col-md-3">
+                        <a href="https://defnotdevs.greenriverdev.com/305/Sprint/">
+                            <div class="centered">
+                                <h2>St James Outreach Center</h2>
+                            </div>
+                        </a>
                         <img class="img-fluid" src="images/stjames.png" alt="St James Outreach">
                     </div>
                     <div class="col-md-3">
@@ -69,8 +74,8 @@
                             for a local organization that provides assistance to those in need. The website must be
                             cleanly designed while displaying all required information, and be intuitive and accessible.
                             Our team is primarily using Bootstrap 4 to construct the website so that it is responsive
-                            and aesthetically easy to view regardless of the device it is being viewed on. </p>
-
+                            and aesthetically easy to view regardless of the device it is being viewed on. Click the
+                            photo to see more!</p>
                     </div>
                     <div class="col-md-3">
                     </div>
@@ -80,10 +85,10 @@
                     </div>
                     <div class="col-md-3 pt-3">
                         <h1>Previous Projects</h1><br>
-                        <h4>Choose Your Own Adventure Game</h4>
-                        <h4>Josephus Circle Game</h4>
-                        <h4>Frogger Browser Game</h4>
-                        <h4>Video Game Clip Showcase Website</h4>
+                        <h4><a href="https://github.com/kvallido/220/tree/main/ChooseYourOwnAdventure" class="old-projects">Choose Your Own Adventure Game</a></h4>
+                        <h4><a href="https://github.com/kvallido/220/tree/main/JosephusGame" class="old-projects">Josephus Circle Game</a></h4>
+                        <h4><a href="http://kvallido.greenriverdev.com/frogger/index.html" class="old-projects">Frogger Browser Game</a></h4>
+                        <h4><a href="http://kvallido.greenriverdev.com/final-207/thehighlights.html" class="old-projects">Video Game Clip Showcase Website</a></h4>
                         <h4>Pokemon Database</h4>
                     </div>
                     <div class="col-md-3">
@@ -95,10 +100,24 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
+                                    <img class="d-block w-100" src="images/git.png" alt="Github">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <a href="https://github.com/kvallido"><h5>visit github for more</h5>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
                                     <img class="d-block w-100" src="images/frogger.png" alt="Frogger">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <a href="http://kvallido.greenriverdev.com/frogger/index.html"><h5>javascript frogger game</h5></a>
+                                    </div>
                                 </div>
                                 <div class="carousel-item">
                                     <img class="d-block w-100" src="images/clips.png" alt="Great Clips">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <a href="http://kvallido.greenriverdev.com/final-207/thehighlights.html"><h5>video game clip highlights
+                                        </h5></a>
+                                    </div>
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
