--- a/landing.html
+++ b/landing.html
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link " href="about.html">About</a>
+                    <a class="nav-link " href="/resume/about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="portfolio.html">Portfolio</a>
+                    <a class="nav-link " href="/resume/portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/guestbook/index.html">Guestbook</a>
@@ -46,7 +46,7 @@
                 <h2>aspiring software developer</h2>
                 <hr class="my-4">
                 <div class="row justify-content-center">
-                    <a href="about.html" class="btn" role="button" id="button">connect with me</a><br>
+                    <a href="/resume/about.html" class="btn" role="button" id="button">connect with me</a><br>
                 </div>
 
                 <div class="d-flex justify-content-center" id="contact-icons">
