--- a/resume/about.html
+++ b/resume/about.html
@@ -101,14 +101,20 @@
                 </div>
                 <!-- PHOTO OF SELF -->
                 <div class="col-lg-3 my-auto" id="photo">
-                    <img src="images/IMG_0010.png" id="self" class="rounded-circle img-fluid float-left" alt="photo of myself">
+                    <div class="row justify-content-center">
+                        <img src="images/IMG_0010.png" id="self" class="rounded-circle img-fluid float-left" alt="photo of myself">
+                    </div>
+
+                    <div class="row justify-content-center">
+                        <a href="https://drive.google.com/file/d/1UoO-bDG8wZtwMdPmZL4OazKrorqNukOx/view?usp=sharing" class="btn" role="button" id="button">view resume</a><br>
+                    </div>
                 </div>
             </div>
 
             <!-- CONTACT INFO/FOOTER -->
             <div class="row justify-content-center">
                 <div class="container-fluid mt-5 p-5" id="contact-info">
-                    <a href="tel:123-456-7890" class="contact-link">(123) 456-7890</a> |
+                    <a href="tel:123-456-7890" class="contact-link">(123) 456-7899</a> |
                     <a href="mailto:kvallido@mail.greenriver.edu" class="contact-link">vallido.kimberly@gmail.com</a> |
                     <a href="https://www.linkedin.com/in/kvallido/" class="contact-link" target="_blank">www.linkedin.com/in/kvallido</a>
                 </div>
